Fixed box overlap in profile page

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -55,3 +55,7 @@ h1 {
 	margin-top:0%; 
 	padding-top:0%;
 }
+
+.clear {
+	clear: both;
+}
